--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
-<html>
-  <head>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
-      location.href("/cs224n")
+        location.replace("/cs224n")
     </script>
-  </head>
-</html>
+    <title>Jason's Github</title>
+</head>
+<body>
+    
+</body>
