--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script>
         location.replace("/cs224n")
     </script>
-    <title>Jason's Github</title>
+    <title></title>
 </head>
 <body>
     
