--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
-        location.replace("/cs224n")
+        location.replace("https://skku-comedu-nlp.github.io/cs224n")
     </script>
     <title></title>
 </head>
